Add GET route for user's goaltodos of today
