# app/Http/Controllers/UserController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Folder;
+use App\GoalTodo;
 use App\Todo;
 use App\TodoList;
 use App\Goal;
@@ -59,6 +60,39 @@ class UserController extends Controller
         ];
 
         return $array;
+    }
+
+    /**
+     * Returns all goalTodos a given user for today
+     * @param $id
+     * @return array jsonArray
+     */
+    public function goalTodosToday($id){
+        $goals = Goal::select('id', 'label', 'quantity')->where(['user_id' => $id])->get()->toArray();
+
+        $array = [];
+
+        // loop through user's goals
+        foreach ($goals as $goal){
+
+                $goalTodos = GoalTodo::where(['goal_id' => $goal['id'], 'dueDate' => date('Y-m-d')])->get()->toArray();
+
+                // GoalTodos exists
+                if (!empty($goalTodos)) {
+                    // Loop through goalTodos
+                    foreach ($goalTodos as $goalTodo) {
+                        // Create a new array with goalData we have and goalTodos
+                        array_push($array, array_merge($goalTodo, $goal));
+                    }
+                }
+
+        }
+
+        $result = [
+            "goalTodos" => $array
+        ];
+
+        return $result;
     }
 
 }
